usando ahora sass

--- a/docs/estilos/puntaje.css
+++ b/docs/estilos/puntaje.css
@@ -1,39 +1,53 @@
-#bodyPuntaje{
-    font-family: sans-serif;
-    width: auto;
-    min-height: 100vh;
-    display: grid;
-    grid-template-areas: 
-    "header"
-    "mainProductos"
-    "footer";
-    grid-template-rows: 100px 1fr 100px;
-    grid-template-columns: auto;
-    font-size: 1.1rem;
-}
-#mainPuntaje{
-    grid-area: mainProductos;
-    display: flex;
-    justify-content: center;
-    background: linear-gradient(354deg, rgba(103,61,254,1) 0%, rgba(83,107,245,1) 50%, rgba(95,228,247,1) 100%);
+header {
+  grid-area: header;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #ff5555; }
 
-}
+header ul {
+  display: flex; }
 
-table,caption,tr,th,td{
-    border: 1px solid black;
-    text-align: center;
-    padding: 10px;
+header li {
+  list-style: none;
+  margin-right: 30px; }
 
-}
+header a {
+  color: black;
+  font-size: 20px; }
+
+#bodyPuntaje {
+  font-family: sans-serif;
+  width: auto;
+  min-height: 100vh;
+  display: grid;
+  grid-template-areas: "header" "mainPuntaje";
+  grid-template-rows: 100px 1fr;
+  grid-template-columns: auto;
+  font-size: 1.1rem; }
+
+#mainPuntaje {
+  grid-area: mainPuntaje;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(354deg, RGBa(103, 61, 254, 1) 0%, RGBa(83, 107, 245, 1) 50%, RGBa(95, 228, 247, 1) 100%); }
+
+table, caption, tr, th, td {
+  border: 1px solid black;
+  text-align: center;
+  padding: 10px; }
+
 table {
-    caption-side: top;
-    border-collapse: separate;
-    width: 90%;
-    margin: 50px 0px;
-}
-caption{
-    background-color: #0d4879;
-}
-#tablaFooter tr{
-    text-align: center
-}
+  caption-side: top;
+  border-collapse: separate;
+  width: 90%;
+  margin: 50px 0px; }
+
+caption {
+  background-color: #0d4879; }
+
+#tablaFooter tr {
+  text-align: center; }
