--- a/docs/estilos/productos.css
+++ b/docs/estilos/productos.css
@@ -1,76 +1,88 @@
-#bodyProductos{
-    font-family: sans-serif;
-    width: auto;
-    min-height: 100vh;
-    display: grid;
-    grid-template-areas: 
-    "header"
-    "mainProductos"
-    "footer";
-    grid-template-rows: 100px 1fr 100px;
-    grid-template-columns: auto;
-    font-size: 1.1rem;
-}
-#mainProductos{
-    grid-area: mainProductos;
+header {
+  grid-area: header;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #ff5555; }
 
-}
-#contendedorOferta{
-    display: flex;
-    justify-content: space-evenly;
-    margin: 50px 0px 0px 0px;
-}
-.productosOferta{
-    width: 200px;
-    height: 350px;
-    border: 5px solid black;
-    text-align: center;
-    border-radius: 5%;
-    background: #a5cdff;
-}
+header ul {
+  display: flex; }
+
+header li {
+  list-style: none;
+  margin-right: 30px; }
+
+header a {
+  color: black;
+  font-size: 20px; }
+
+#bodyProductos {
+  font-family: sans-serif;
+  width: auto;
+  min-height: 100vh;
+  display: grid;
+  grid-template-areas: "header" "mainProductos";
+  grid-template-rows: 100px 1fr;
+  grid-template-columns: auto;
+  font-size: 1.1rem; }
+
+main {
+  grid-area: mainProductos;
+  background: linear-gradient(354deg, RGBa(103, 61, 254, 1) 0%, RGBa(83, 107, 245, 1) 50%, RGBa(95, 228, 247, 1) 100%); }
+
+#contendedorOferta {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 50px 0px 0px 0px; }
+
+.productosOferta {
+  width: 200px;
+  height: 350px;
+  border: 5px solid black;
+  text-align: center;
+  border-radius: 5%;
+  background: #a5cdff; }
+
 div#resumenCompra {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}
-.botonesOferta{
-    width: 150px;
-}
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center; }
 
-.productosOferta img{
-    width: 150px;
-    height: 200px;
-}
+.botonesOferta {
+  width: 150px; }
 
-table,caption,tr,th,td{
-    border: 1px solid black;
-    text-align: center;
-    padding: 10px;
-}
+.productosOferta img {
+  width: 150px;
+  height: 200px; }
+
+table, caption, tr, th, td {
+  border: 1px solid black;
+  text-align: center;
+  padding: 10px; }
+
 table {
-    caption-side: top;
-    border-collapse: separate;
-    margin-top: 50px;
-}
-caption{
-    background-color: #0d4879;
-}
-#tablaFooter tr{
-    text-align: center
-}
+  caption-side: top;
+  border-collapse: separate;
+  margin-top: 50px; }
 
-#contenedorBotonesCompra{
-    margin: 18px;
-}
-#contenedorBotonesCompra button{
-    height: 40px;
-    width: 101px;
-    margin-right: 17px;
-    color: white;
-    background: #00b6ff;
-    border-radius: 14px;
-    border: 3px solid black;
-    text-shadow: 0px 0px 1px black;
-    letter-spacing: 2px;
-}
+caption {
+  background-color: #0d4879; }
+
+#tablaFooter tr {
+  text-align: center; }
+
+#contenedorBotonesCompra {
+  margin: 18px; }
+
+#contenedorBotonesCompra button {
+  height: 40px;
+  width: 101px;
+  margin-right: 17px;
+  color: white;
+  background: #00b6ff;
+  border-radius: 14px;
+  border: 3px solid black;
+  text-shadow: 0px 0px 1px black;
+  letter-spacing: 2px; }
