--- a/docs/estilos/productos.css
+++ b/docs/estilos/productos.css
@@ -1,3 +1,15 @@
+* {
+  padding: 0;
+  margin: 0; }
+
+body {
+  text-align: center;
+  background: linear-gradient(354deg, RGBa(103, 61, 254, 1) 0%, RGBa(83, 107, 245, 1) 50%, RGBa(95, 228, 247, 1) 100%); }
+
+button {
+  border: 1px solid black;
+  box-shadow: 0 0 5px 0.5px rgba(0, 0, 0, 0.502); }
+
 header {
   grid-area: header;
   display: flex;
@@ -15,24 +27,39 @@ header li {
 
 header a {
   color: black;
-  font-size: 20px; }
+  font-size: 20px;
+  text-decoration: none; }
+
+header a:hover {
+  text-decoration: underline;
+  text-shadow: 0PX 0PX 12PX white; }
+
+footer {
+  grid-area: footer;
+  margin-bottom: 0px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
 
 #bodyProductos {
   font-family: sans-serif;
   width: auto;
   min-height: 100vh;
   display: grid;
-  grid-template-areas: "header" "mainProductos";
-  grid-template-rows: 100px 1fr;
+  grid-template-areas: "header" "mainProductos" "footer";
+  grid-template-rows: 100px 1fr 100px;
   grid-template-columns: auto;
-  font-size: 1.1rem; }
+  font-size: 1.1rem;
+  background: linear-gradient(354deg, RGBa(103, 61, 254, 1) 0%, RGBa(83, 107, 245, 1) 50%, RGBa(95, 228, 247, 1) 100%); }
 
 main {
-  grid-area: mainProductos;
-  background: linear-gradient(354deg, RGBa(103, 61, 254, 1) 0%, RGBa(83, 107, 245, 1) 50%, RGBa(95, 228, 247, 1) 100%); }
+  grid-area: mainProductos; }
 
 #contendedorOferta {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   margin: 50px 0px 0px 0px; }
 
@@ -42,7 +69,8 @@ main {
   border: 5px solid black;
   text-align: center;
   border-radius: 5%;
-  background: #a5cdff; }
+  background: #a5cdff;
+  box-shadow: 0 0 10px 1px #00000036; }
 
 div#resumenCompra {
   display: flex;
@@ -51,7 +79,8 @@ div#resumenCompra {
   align-items: center; }
 
 .botonesOferta {
-  width: 150px; }
+  width: 150px;
+  background: RGB(0, 140, 255); }
 
 .productosOferta img {
   width: 150px;
@@ -64,8 +93,14 @@ table, caption, tr, th, td {
 
 table {
   caption-side: top;
-  border-collapse: separate;
-  margin-top: 50px; }
+  border-collapse: collapse;
+  margin-top: 50px;
+  background: #8fe0ffb5;
+  box-shadow: 0 0 6px 0.5px black; }
+
+table th {
+  background: #aed8ff;
+  border-bottom: 3px solid black; }
 
 caption {
   background-color: #0d4879; }
@@ -78,11 +113,11 @@ caption {
 
 #contenedorBotonesCompra button {
   height: 40px;
-  width: 101px;
+  padding: 3px;
   margin-right: 17px;
-  color: white;
-  background: #00b6ff;
+  color: black;
+  background: RGB(0, 140, 255);
   border-radius: 14px;
   border: 3px solid black;
   text-shadow: 0px 0px 1px black;
-  letter-spacing: 2px; }
+  letter-spacing: 1px; }
