--- a/docs/estilos/style.css
+++ b/docs/estilos/style.css
@@ -1,3 +1,15 @@
+* {
+  padding: 0;
+  margin: 0; }
+
+body {
+  text-align: center;
+  background: linear-gradient(354deg, RGBa(103, 61, 254, 1) 0%, RGBa(83, 107, 245, 1) 50%, RGBa(95, 228, 247, 1) 100%); }
+
+button {
+  border: 1px solid black;
+  box-shadow: 0 0 5px 0.5px rgba(0, 0, 0, 0.502); }
+
 header {
   grid-area: header;
   display: flex;
@@ -15,30 +27,42 @@ header li {
 
 header a {
   color: black;
-  font-size: 20px; }
+  font-size: 20px;
+  text-decoration: none; }
 
-* {
-  padding: 0;
-  margin: 0; }
+header a:hover {
+  text-decoration: underline;
+  text-shadow: 0PX 0PX 12PX white; }
+
+footer {
+  grid-area: footer;
+  margin-bottom: 0px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
 
 .formBody {
   font-family: sans-serif;
   width: auto;
   min-height: 100vh;
   display: grid;
-  grid-template-areas: "header" "contenedorForm";
-  grid-template-rows: 100px 1fr;
+  grid-template-areas: "header" "contenedorForm" "footer";
+  grid-template-rows: 100px 1fr 100px;
   grid-template-columns: auto;
-  font-size: 1.1rem; }
+  font-size: 1.1rem;
+  background: linear-gradient(354deg, RGBa(103, 61, 254, 1) 0%, RGBa(83, 107, 245, 1) 50%, RGBa(95, 228, 247, 1) 100%); }
 
 .completoBody {
   font-family: sans-serif;
   width: auto;
   display: grid;
-  grid-template-areas: "header" "mainIndex";
-  grid-template-rows: 100px auto;
+  grid-template-areas: "header" "mainIndex" "footer";
+  grid-template-rows: 100px auto 100px;
   grid-template-columns: auto;
-  font-size: 1.1rem; }
+  font-size: 1.1rem;
+  background: linear-gradient(45deg, #c506ff 0%, #0d0979 50%, #5189ff 90%); }
 
 .bien {
   background: RGB(144, 255, 144); }
@@ -73,12 +97,11 @@ header a {
   width: auto;
   min-height: 150vh;
   display: grid;
-  grid-template-areas: "matematica" "lengua" "memoria" "banderas" "historia" "contenedorBotonFinal";
+  grid-template-areas: "categorias" "matematica" "lengua" "memoria" "banderas" "historia" "contenedorBotonFinal";
   grid-template-rows: auto auto auto auto auto auto;
   grid-template-columns: auto;
   font-size: 1.1rem;
-  /* background: #7600bf; */
-  background: linear-gradient(45deg, RGBa(197, 6, 255, 1) 0%, RGBa(13, 9, 121, 1) 50%, RGBa(81, 137, 255, 1) 90%); }
+  /* background: linear-gradient(45deg, RGBa(197,6,255,1) 0%, RGBa(13,9,121,1) 50%, RGBa(81,137,255,1) 90%); */ }
 
 .materia {
   margin: 3% 12%;
@@ -86,6 +109,24 @@ header a {
   min-height: 600px;
   padding: 3% 0%;
   box-shadow: 0px 0px 14px 3px #0000009e; }
+
+#index-categorias {
+  margin: 25px 0;
+  margin: 25px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-content: center; }
+
+#index-categorias a {
+  text-decoration: none;
+  color: black;
+  margin: 9px; }
+
+#index-categorias a:hover {
+  text-decoration: underline;
+  text-shadow: 0PX 0PX 12PX white; }
 
 /* -------------- MATEMATICA -------------- */
 #matematica {
@@ -98,6 +139,11 @@ header a {
 
 #calculadoraValor1, #calculadoraValor2 {
   width: 75px; }
+
+#matematica button {
+  background: #ff5555;
+  width: min-content2px;
+  width: 100px; }
 
 /* -------------- LENGUA -------------- */
 #lengua {
@@ -125,6 +171,12 @@ header a {
 
 hr {
   width: 75%; }
+
+button {
+  background: #ff5555;
+  width: min-content2px;
+  width: 100px;
+  margin: 20px; }
 
 /* -------------- MEMORIA -------------- */
 #memoria {
@@ -381,7 +433,7 @@ label {
 #contenedorBotonFinal a {
   width: 94px;
   height: 94px;
-  background: #78bfff;
+  background: #000000;
   border-radius: 119%;
   text-decoration: none;
   color: white;
@@ -392,6 +444,10 @@ label {
   align-content: center;
   margin: 20px 0px;
   animation: sombra 2s infinite linear; }
+
+#contenedorBotonFinal a h3 {
+  text-shadow: 0px 0px 3px black;
+  font-size: 37px; }
 
 @keyframes sombra {
   0% {
@@ -404,17 +460,6 @@ label {
     box-shadow: 0px 0px 20px 5px RGB(0, 166, 255); }
   100% {
     box-shadow: 0px 0px 20px 5px RGB(255, 0, 191); } }
-
-footer {
-  grid-area: footer;
-  margin-bottom: 0px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  /* background-color: RGB(255, 85, 85); */
-  margin: 20px 0px; }
 
 @media screen and (min-width: 0px) and (max-width: 768px) {
   .materia {
