--- a/docs/scss/productos.scss
+++ b/docs/scss/productos.scss
@@ -1,4 +1,7 @@
+@import "general";
 @import "header";
+@import "footer";
+@import "variables";
 #bodyProductos{
     font-family: sans-serif;
     width: auto;
@@ -6,18 +9,20 @@
     display: grid;
     grid-template-areas: 
     "header"
-    "mainProductos";
-    grid-template-rows: 100px 1fr;
+    "mainProductos"
+    "footer";
+    grid-template-rows: 100px 1fr 100px;
     grid-template-columns: auto;
     font-size: 1.1rem;
+    background: linear-gradient(354deg, RGBa(103,61,254,1) 0%, RGBa(83,107,245,1) 50%, RGBa(95,228,247,1) 100%);
 }
 main{
     grid-area: mainProductos;
-    background: linear-gradient(354deg, RGBa(103,61,254,1) 0%, RGBa(83,107,245,1) 50%, RGBa(95,228,247,1) 100%);
 
 }
 #contendedorOferta{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     margin: 50px 0px 0px 0px;
 }
@@ -28,6 +33,7 @@ main{
     text-align: center;
     border-radius: 5%;
     background: #a5cdff;
+    box-shadow: 0 0 10px 1px #00000036;
 }
 div#resumenCompra {
     display: flex;
@@ -37,6 +43,7 @@ div#resumenCompra {
 }
 .botonesOferta{
     width: 150px;
+    background: $azul;
 }
 
 .productosOferta img{
@@ -51,8 +58,14 @@ table,caption,tr,th,td{
 }
 table {
     caption-side: top;
-    border-collapse: separate;
+    border-collapse: collapse;
     margin-top: 50px;
+    background: #8fe0ffb5;
+    box-shadow: 0 0 6px 0.5px black;
+}
+table th{
+    background: #aed8ff;
+    border-bottom: 3px solid black;
 }
 caption{
     background-color: #0d4879;
@@ -66,12 +79,12 @@ caption{
 }
 #contenedorBotonesCompra button{
     height: 40px;
-    width: 101px;
+    padding: 3px;
     margin-right: 17px;
-    color: white;
-    background: #00b6ff;
+    color: rgb(0, 0, 0);
+    background: $azul;
     border-radius: 14px;
     border: 3px solid black;
     text-shadow: 0px 0px 1px black;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
 }
