--- a/docs/scss/_header.scss
+++ b/docs/scss/_header.scss
@@ -2,6 +2,7 @@ header{
     grid-area: header;
     display: flex;
     flex-direction: row;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     background-color: #ff5555;
