--- a/docs/scss/productos.scss
+++ b/docs/scss/productos.scss
@@ -62,6 +62,7 @@ table {
     margin-top: 50px;
     background: #8fe0ffb5;
     box-shadow: 0 0 6px 0.5px black;
+    
 }
 table th{
     background: #aed8ff;
@@ -87,4 +88,11 @@ caption{
     border: 3px solid black;
     text-shadow: 0px 0px 1px black;
     letter-spacing: 1px;
+}
+
+@media screen and (min-width: 0px) and (max-width: 768px){
+    table{
+        width: 100%;
+        font-size: 12px;
+    }
 }
