--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -474,4 +474,9 @@ label{
         height: 150px;
         
     } 
+    .botonesColores{
+        width: 100px;
+        height: 40px;
+        margin-bottom: 5px;
+    }
 }
