--- a/docs/estilos/style.css
+++ b/docs/estilos/style.css
@@ -410,6 +410,9 @@ div#historia {
   flex-direction: column;
   align-items: center; }
 
+.contenedorRadios {
+  text-align: start; }
+
 label {
   pointer-events: none; }
 
@@ -463,6 +466,8 @@ label {
     box-shadow: 0px 0px 20px 5px RGB(255, 0, 191); } }
 
 @media screen and (min-width: 0px) and (max-width: 768px) {
+  .swal2-container.swal2-center > .swal2-popup {
+    font-size: 13px; }
   .materia {
     margin: 3% 0%;
     border-radius: 1%; }
