--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -398,6 +398,9 @@ div#historia {
     flex-direction: column;
     align-items: center;
 }
+.contenedorRadios {
+    text-align: start;
+}
 label{
     pointer-events: none;
 }
@@ -460,6 +463,9 @@ label{
 
 
 @media screen and (min-width: 0px) and (max-width: 768px){
+    .swal2-container.swal2-center>.swal2-popup {
+        font-size: 13px;;
+    }
     .materia{
         margin: 3% 0%;
         border-radius: 1%;
