actualizacion de estilos imagenes seccion registrar

--- a/docs/estilos/productos.css
+++ b/docs/estilos/productos.css
@@ -1,129 +1,1 @@
-* {
-  padding: 0;
-  margin: 0; }
-
-body {
-  text-align: center;
-  background: linear-gradient(354deg, RGBa(103, 61, 254, 1) 0%, RGBa(83, 107, 245, 1) 50%, RGBa(95, 228, 247, 1) 100%); }
-
-button {
-  border: 1px solid black;
-  box-shadow: 0 0 5px 0.5px rgba(0, 0, 0, 0.502); }
-
-header {
-  grid-area: header;
-  display: flex;
-  flex-direction: row;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  background-color: #ff5555; }
-
-header ul {
-  display: flex; }
-
-header li {
-  list-style: none;
-  margin-right: 30px; }
-
-header a {
-  color: black;
-  font-size: 20px;
-  text-decoration: none; }
-
-header a:hover {
-  text-decoration: underline;
-  text-shadow: 0PX 0PX 12PX white; }
-
-footer {
-  grid-area: footer;
-  margin-bottom: 0px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; }
-
-#bodyProductos {
-  font-family: sans-serif;
-  width: auto;
-  min-height: 100vh;
-  display: grid;
-  grid-template-areas: "header" "mainProductos" "footer";
-  grid-template-rows: 100px 1fr 100px;
-  grid-template-columns: auto;
-  font-size: 1.1rem;
-  background: linear-gradient(354deg, RGBa(103, 61, 254, 1) 0%, RGBa(83, 107, 245, 1) 50%, RGBa(95, 228, 247, 1) 100%); }
-
-main {
-  grid-area: mainProductos; }
-
-#contendedorOferta {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  margin: 50px 0px 0px 0px; }
-
-.productosOferta {
-  width: 200px;
-  height: 350px;
-  border: 5px solid black;
-  text-align: center;
-  border-radius: 5%;
-  background: #a5cdff;
-  box-shadow: 0 0 10px 1px #00000036; }
-
-div#resumenCompra {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center; }
-
-.botonesOferta {
-  width: 150px;
-  background: RGB(0, 140, 255); }
-
-.productosOferta img {
-  width: 150px;
-  height: 200px; }
-
-table, caption, tr, th, td {
-  border: 1px solid black;
-  text-align: center;
-  padding: 10px; }
-
-table {
-  caption-side: top;
-  border-collapse: collapse;
-  margin-top: 50px;
-  background: #8fe0ffb5;
-  box-shadow: 0 0 6px 0.5px black; }
-
-table th {
-  background: #aed8ff;
-  border-bottom: 3px solid black; }
-
-caption {
-  background-color: #0d4879; }
-
-#tablaFooter tr {
-  text-align: center; }
-
-#contenedorBotonesCompra {
-  margin: 18px; }
-
-#contenedorBotonesCompra button {
-  height: 40px;
-  padding: 3px;
-  margin-right: 17px;
-  color: black;
-  background: RGB(0, 140, 255);
-  border-radius: 14px;
-  border: 3px solid black;
-  text-shadow: 0px 0px 1px black;
-  letter-spacing: 1px; }
-
-@media screen and (min-width: 0px) and (max-width: 768px) {
-  table {
-    width: 100%;
-    font-size: 12px; } }
+*{padding:0;margin:0}html{font-family:sans-serif}body{text-align:center;background:linear-gradient(354deg, RGBa(103, 61, 254, 1) 0%, RGBa(83, 107, 245, 1) 50%, RGBa(95, 228, 247, 1) 100%)}button{border:1px solid black;box-shadow:0 0 2px 0.5px rgba(0,0,0,0.502);text-transform:uppercase;font-weight:bold;border-radius:5px;background:#f55;width:min-content;padding:0 3%;margin:15px}header{grid-area:header;display:flex;flex-direction:row;justify-content:space-evenly;align-items:center;background-color:#ff5555}header>.header-title{font-size:40px;font-weight:bold}header ul{display:flex;gap:59px}header li{list-style:none}header a{color:black;font-size:20px;text-decoration:none}header a:hover{text-decoration:underline;text-shadow:0PX 0PX 12PX white}header div{color:yellow;display:flex;flex-direction:column;align-items:center;justify-content:center;flex-wrap:wrap;gap:10px}header div button{border:1px solid black;box-shadow:0 0 2px 0.5px rgba(0,0,0,0.502);text-transform:uppercase;font-weight:bold;border-radius:5px;background:#ff5555;width:min-content;padding:0 3%;margin:0px}footer{grid-area:footer;margin-bottom:0px;text-align:center;display:flex;flex-direction:column;justify-content:center;align-items:center}#bodyProductos{width:auto;min-height:100vh;display:grid;grid-template-areas:"header" "mainProductos" "footer";grid-template-rows:auto 1fr 100px;grid-template-columns:auto;font-size:1.1rem;background:linear-gradient(354deg, RGBa(103, 61, 254, 1) 0%, RGBa(83, 107, 245, 1) 50%, RGBa(95, 228, 247, 1) 100%)}main{grid-area:mainProductos}#contendedorOferta{display:flex;flex-wrap:wrap;justify-content:space-evenly;margin:50px 0px 0px 0px}.productosOferta{width:200px;height:350px;border:5px solid black;text-align:center;border-radius:5%;background:#a5cdff;box-shadow:0 0 10px 1px #00000036}div#resumenCompra{display:flex;justify-content:center;flex-direction:column;align-items:center;opacity:30%}.botonesOferta{background:RGB(0, 140, 255);width:min-content;padding:2%;margin-top:3%;text-transform:uppercase}.productosOferta img{width:150px;height:200px}table,caption,tr,th,td{border:1px solid black;text-align:center;padding:10px}table{caption-side:top;border-collapse:collapse;margin-top:50px;background:#8fe0ffb5;box-shadow:0 0 6px 0.5px black}table th{background:#aed8ff;border-bottom:3px solid black}caption{background-color:#0d4879}#tablaFooter tr{text-align:center}#contenedorBotonesCompra{margin:18px}#contenedorBotonesCompra button{height:40px;padding:3px;margin-right:17px;color:#000;background:RGB(0, 140, 255);border-radius:14px;border:3px solid black;text-shadow:0px 0px 1px black;letter-spacing:1px}@media screen and (min-width: 0px) and (max-width: 768px){table{width:100%;font-size:12px}header{flex-direction:column}header div ul{display:flex;flex-direction:row}}
