--- a/docs/scss/_header.scss
+++ b/docs/scss/_header.scss
@@ -2,17 +2,20 @@ header{
     grid-area: header;
     display: flex;
     flex-direction: row;
-    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     background-color: #ff5555;
 }
+header > .header-title{
+    font-size: 40px;
+    font-weight: bold;
+}
 header ul{
-    display: flex
+    display: flex;
+    gap: 59px;
 }
 header li{
     list-style: none;
-    margin-right: 30px;
     
 }
 header a{
@@ -23,4 +26,24 @@ header a{
 header a:hover{
     text-decoration: underline;
     text-shadow: 0PX 0PX 12PX white;
+}
+header div{
+        color: yellow;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+header div button {
+    border: 1px solid black;
+    box-shadow: 0 0 2px 0.5px rgba(0, 0, 0, 0.502);
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: 5px;
+    background: #ff5555;
+    width: min-content;
+    padding: 0 3%;
+    margin: 0px; 
 }
