--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -3,8 +3,7 @@
 @import "footer";
 @import "variables";
 
-.formBody{
-    font-family: sans-serif;
+#bodyRegistrar{
     width: auto;
     min-height: 100vh;
     display: grid;
@@ -12,24 +11,22 @@
     "header"
     "contenedorForm"
     "footer";
-    grid-template-rows: 100px 1fr 100px;
+    grid-template-rows: auto 1fr 100px;
     grid-template-columns: auto;
     font-size: 1.1rem;
     background: linear-gradient(354deg, RGBa(103, 61, 254, 1) 0%, RGBa(83, 107, 245, 1) 50%, RGBa(95, 228, 247, 1) 100%);
 }
-.completoBody{
-    font-family: sans-serif;
+#bodyIndex{
     width: auto;
     display: grid;
     grid-template-areas: 
     "header"
     "mainIndex"
     "footer";
-    grid-template-rows: 100px auto 100px;
+    grid-template-rows: auto auto 100px;
     grid-template-columns: auto;
     font-size: 1.1rem;
-    background: linear-gradient(45deg, rgb(197, 6, 255) 0%, rgb(13, 9, 121) 50%, rgb(81, 137, 255) 90%);
-    
+    background: linear-gradient(45deg, #680088 0%, #0d097d 50%, #184fc5 90%);
 }
 .bien{
     background: RGB(144, 255, 144);
@@ -44,7 +41,6 @@
 #contenedorForm{
     display: flex;
     flex-direction: column;
-    align-content: center;
     justify-content: center;
     align-items: center;
     background: linear-gradient(354deg, RGBa(103,61,254,1) 0%, RGBa(83,107,245,1) 50%, RGBa(95,228,247,1) 100%);
@@ -62,7 +58,6 @@
 }
 #mainIndex{
     grid-area: mainIndex;
-    font-family: sans-serif;
     width: auto;
     min-height: 150vh;
     display: grid;
@@ -77,7 +72,6 @@
     grid-template-rows: auto auto auto auto auto auto;
     grid-template-columns: auto;
     font-size: 1.1rem;
-    /* background: linear-gradient(45deg, RGBa(197,6,255,1) 0%, RGBa(13,9,121,1) 50%, RGBa(81,137,255,1) 90%); */
 }
 .materia{
     margin: 3% 12%;
@@ -87,18 +81,18 @@
     box-shadow: 0px 0px 14px 3px #0000009e;
 }
 #index-categorias{
-    margin: 25px 0;
+    width: 100%;
     margin: 25px 0;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
     align-content: center;
+    gap: 5%;
 }
 #index-categorias a{
     text-decoration: none;
-    color: black;
-    margin: 9px;
+    color: rgb(255, 255, 255);
 }
 #index-categorias a:hover{
     text-decoration: underline;
@@ -113,13 +107,52 @@
     align-items: center;
     background: linear-gradient(263deg, RGB(138 109 245) 0%, RGBa(83,107,245,1) 50%, RGB(110 198 255) 100%);
 }
+#contenedorCaluladora{
+    display: flex;
+    align-items: center;
+    background: #000000bd;
+    justify-content: center;
+    padding: 10px 10px 20px 10px;
+    border-radius: 10px;
+    flex-direction: column;
+    width: min-content;
+    line-break: anywhere;
+}
+#calculadora{
+    display: flex;
+    flex-direction: row;
+}
+#calculadora div{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly
+}
+#calculadora div div{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly
+}
 #calculadoraValor1, #calculadoraValor2{
     width: 75px;
 }
+.botonesCalculadora{
+    width: 20px;
+    height: 21px;
+    font-size: 16px;
+    background: #ff5555;
+    border: none;
+    margin: 1px;
+    padding: 3px;
+    border-radius: 5px;
+}
 #matematica button{
     background: $botonColor;
-    width: min-content + 2px;
     width: 100px;
+}
+#contenedorCaluladora p {
+    color: white;
+    margin: 0px 0px 0px 23px;
+    letter-spacing: 4px;
 }
 /* -------------- LENGUA -------------- */
 #lengua{
@@ -146,14 +179,12 @@
     text-align: center;
     padding: 16px 100px;
 }
+.lengua-historiaPersonal{
+    text-decoration: underline;
+    font-weight: bold;
+}
 hr{
     width: 75%;
-}
-button{
-    background: $botonColor;
-    width: min-content + 2px;
-    width: 100px;
-    margin: 20px;
 }
 /* -------------- MEMORIA -------------- */
 #memoria{
@@ -181,7 +212,6 @@ p#textoClick {
 #contenedorDeImagenes{
     display: flex;
     flex-direction: column;
-    /* flex-wrap: wrap; */
     justify-content: center;
 }
 #memoriaBloque1para3{
@@ -205,6 +235,9 @@ p#textoClick {
 .claseCajaClick p{
     position: absolute;
     font-size: 57px;
+    -webkit-text-stroke-color: #ffffff;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-fill-color: #ffffff00;
 }
 .claseCajaClick img{
     width: 100%;
@@ -265,7 +298,6 @@ div#contenedorDeBanderas {
     width: 370px;
     height: 190px;
     display: grid;
-    /* grid-template-columns: 1fr 0.25fr 1fr; */
     grid-template-rows: 33% 33% 34%;
     gap: 7px;
     grid-template-areas:
@@ -281,7 +313,6 @@ div#contenedorDeBanderas {
     justify-content: center;
 }
 .cajasArgentina img{
-    /* width: 100%; */
     height: 100%;
     filter: brightness(1.1);
     mix-blend-mode: multiply;
@@ -324,6 +355,8 @@ div#contenedorDeBanderas {
     width: 150px;
     height: 50px;
     margin-bottom: 5px;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 .botonesColores:active{
     box-shadow: 0px 0px 4px 0px black;
@@ -384,7 +417,7 @@ div#contenedorDeBanderas {
 
 /* ------------------------ HISTORIA -----------------------*/
 
-div#historia {
+#historia {
     grid-area: historia;
     display: flex;
     flex-direction: column;
@@ -405,11 +438,11 @@ label{
     pointer-events: none;
 }
 .historiaCorrecto{
-    box-shadow: 0px 0px 12px 10px green;
+    box-shadow: 0px 0px 8px 5px rgb(0, 255, 0);
     pointer-events: none;
 }
 .historiaIncorrecto{
-    box-shadow: 0px 0px 12px 10px  RGB(255, 0, 0);
+    box-shadow: 0px 0px 8px 5px  RGB(255, 0, 0);
     pointer-events: none;
 }
 .sinClick{
@@ -437,7 +470,7 @@ label{
     justify-content: center;
     align-content: center;
     margin: 20px 0px;
-    animation: sombra 2s infinite linear;
+    animation: sombra 2s infinite ease-out;
 }
 #contenedorBotonFinal a h3{
     text-shadow: 0px 0px 3px black;
@@ -445,19 +478,10 @@ label{
 }
 @keyframes sombra{
     0%{
-        box-shadow: 0px 0px 20px 5px RGB(255, 0, 0);
-    }
-    25%{
-        box-shadow: 0px 0px 20px 5px RGB(255, 221, 0);
+        box-shadow: 0px 0px 0px 0px
     }
     50%{
-        box-shadow: 0px 0px 20px 5px RGB(0, 255, 0);
-    }
-    75%{
-        box-shadow: 0px 0px 20px 5px RGB(0, 166, 255);
-    }
-    100%{
-        box-shadow:  0px 0px 20px 5px RGB(255, 0, 191);
+        box-shadow: 0px 0px 20px 10px #48bcff;
     }
 }
 
@@ -466,6 +490,14 @@ label{
     .swal2-container.swal2-center>.swal2-popup {
         font-size: 13px;;
     }
+    header{
+        flex-direction: column;
+    }
+    header div ul{
+    display: flex;
+    flex-direction: row;
+
+}
     .materia{
         margin: 3% 0%;
         border-radius: 1%;
@@ -486,3 +518,54 @@ label{
         margin-bottom: 5px;
     }
 }
+// animation cssloaders.github.io
+#contenedorMioLoader{
+    width: 70px;
+      height: 70px;
+}
+      
+.contenedorMioLoaderEscondido{
+    display: none;
+
+}
+.contenedorMioLoaderAparecer{
+    display: block;
+}
+
+
+  .loader {
+        width: 48px;
+        height: 48px;
+        border:10px solid #FFF;
+        border-radius: 50%;
+        position: relative;
+        transform:rotate(45deg);
+        box-sizing: border-box;
+    display: inline-block;
+      }
+      .loader::before {
+        content: "";
+        position: absolute;
+        box-sizing: border-box;
+        inset:-10px;
+        border-radius: 50%;
+        border:10px solid #FF3D00;
+        animation: prixClipFix 7s linear;
+      }
+  
+      @keyframes prixClipFix {
+          0%   {clip-path:polygon(50% 50%,0 0,0 0,0 0,0 0,0 0)}
+          25%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 0,100% 0,100% 0)}
+          50%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%)}
+          75%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 100%)}
+          100% {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 0)}
+      }
+
+  @keyframes prixClipFix {
+      0%   {clip-path:polygon(50% 50%,0 0,0 0,0 0,0 0,0 0)}
+      25%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 0,100% 0,100% 0)}
+      50%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%)}
+      75%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 100%)}
+      100% {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 0)}
+  }
+    
