agrege avatares en registrar y cambios esteticos

--- a/docs/scss/_general.scss
+++ b/docs/scss/_general.scss
@@ -8,7 +8,7 @@ html{
 }
 body{
     text-align: center;
-    background: linear-gradient(354deg, RGBa(103, 61, 254, 1) 0%, RGBa(83, 107, 245, 1) 50%, RGBa(95, 228, 247, 1) 100%);
+    background: linear-gradient(45deg, #6b5bd8 0%, #5965ff 50%, #418fe4 100%);
 } 
 button{
     border: 1px solid black;
