--- a/docs/scss/_header.scss
+++ b/docs/scss/_header.scss
@@ -1,10 +1,13 @@
 header{
     grid-area: header;
+    box-sizing: border-box;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    background-color: #ff5555;
+    background: linear-gradient(45deg, #5497ff 0%, #858eff 50%, #5497ff 100%);
+    box-shadow: 0 1px 13px 1px #00000063;
+    border-bottom: 1px solid #00000052;
 }
 header > .header-title{
     font-size: 40px;
@@ -25,24 +28,30 @@ header a{
 }
 header a:hover{
     text-decoration: underline;
-    text-shadow: 0PX 0PX 12PX white;
+    text-shadow: 0PX 0PX 12PX #ffffff8f;
 }
 header div{
-        color: yellow;
+    color: #ffef00;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
     gap: 10px;
 }
+img#header-avatar {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    box-shadow: 0 0 10px 0px #000000ba;
+}
 header div button {
     border: 1px solid black;
-    box-shadow: 0 0 2px 0.5px rgba(0, 0, 0, 0.502);
+    box-shadow: 0 0 2px 0.5px #00000040;
     text-transform: uppercase;
     font-weight: bold;
     border-radius: 5px;
-    background: #ff5555;
+    background: #a59aff;
     width: min-content;
     padding: 0 3%;
     margin: 0px; 
