--- a/docs/scss/productos.scss
+++ b/docs/scss/productos.scss
@@ -13,7 +13,7 @@
     grid-template-rows: auto 1fr 100px;
     grid-template-columns: auto;
     font-size: 1.1rem;
-    background: linear-gradient(354deg, RGBa(103,61,254,1) 0%, RGBa(83,107,245,1) 50%, RGBa(95,228,247,1) 100%);
+    /* background: linear-gradient(354deg, RGBa(103,61,254,1) 0%, RGBa(83,107,245,1) 50%, RGBa(95,228,247,1) 100%); */
 }
 main{
     grid-area: mainProductos;
@@ -25,14 +25,37 @@ main{
     justify-content: space-evenly;
     margin: 50px 0px 0px 0px;
 }
-.productosOferta{
-    width: 200px;
-    height: 350px;
-    border: 5px solid black;
+.card-productos {
+    border: 1px solid black;
     text-align: center;
     border-radius: 5%;
     background: #a5cdff;
     box-shadow: 0 0 10px 1px #00000036;
+}
+.card-productos-titulo {
+    text-transform: uppercase;
+}
+.card-productos-boton {
+    background-color: #5fb4ff;
+    width: min-content;
+    padding: 2%;
+    text-transform: uppercase;
+    border: 1px solid #0000002b;
+    box-shadow: 0 0 2px 0.5px #00000036;
+    margin: 5px;
+}
+
+.card-productos-img{
+    width: 150px;
+    height: 200px;
+    border-radius: 5%;
+}
+.card-productos-stock {
+    color: #000000a3;
+}
+
+.card-productos-precio {
+    font-size: 22px;
 }
 div#resumenCompra {
     display: flex;
@@ -40,18 +63,6 @@ div#resumenCompra {
     flex-direction: column;
     align-items: center;
     opacity: 30%;
-}
-.botonesOferta{
-    background: $azul;
-    width: min-content;
-    padding: 2%;
-    margin-top: 3%;
-    text-transform: uppercase;
-}
-
-.productosOferta img{
-    width: 150px;
-    height: 200px;
 }
 
 table,caption,tr,th,td{
@@ -64,7 +75,7 @@ table {
     border-collapse: collapse;
     margin-top: 50px;
     background: #8fe0ffb5;
-    box-shadow: 0 0 6px 0.5px black;
+    box-shadow: 0 0 6px 0.5px #00000080;
     
 }
 table th{
@@ -85,10 +96,10 @@ caption{
     height: 40px;
     padding: 3px;
     margin-right: 17px;
-    color: rgb(0, 0, 0);
+    color: #000000;
     background: $azul;
     border-radius: 14px;
-    border: 3px solid black;
+    border: 1px solid black;
     text-shadow: 0px 0px 1px black;
     letter-spacing: 1px;
 }
