--- a/docs/scss/puntaje.scss
+++ b/docs/scss/puntaje.scss
@@ -13,7 +13,7 @@
     grid-template-rows: auto 1fr 100px;
     grid-template-columns: auto;
     font-size: 1.1rem;
-    background: linear-gradient(354deg, RGBa(103,61,254,1) 0%, RGBa(83,107,245,1) 50%, RGBa(95,228,247,1) 100%);
+    /* background: linear-gradient(354deg, RGBa(103,61,254,1) 0%, RGBa(83,107,245,1) 50%, RGBa(95,228,247,1) 100%); */
 }
 #mainPuntaje{
     grid-area: mainPuntaje;
