--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -14,19 +14,66 @@
     grid-template-rows: auto 1fr 100px;
     grid-template-columns: auto;
     font-size: 1.1rem;
-    background: linear-gradient(354deg, RGBa(103, 61, 254, 1) 0%, RGBa(83, 107, 245, 1) 50%, RGBa(95, 228, 247, 1) 100%);
+    //background: linear-gradient(354deg, RGBa(103, 61, 254, 1) 0%, RGBa(83, 107, 245, 1) 50%, RGBa(95, 228, 247, 1) 100%);
+    background: linear-gradient(45deg, #9383ff 0%, #7a84ff 50%, #62adff 100%);
 }
-#bodyIndex{
+#contenedorForm{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+#formUsuario{
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+    justify-content: space-evenly;
+    align-items: center;
+}
+#contenedorGeneral-avatares-registrar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    width: 100%;
+    gap: 10%;
+    margin-top: 10%;
+}
+
+.contenedor-avatar-registrar{
+    width: 100px;  
+    height: 100px;
+}
+.contenedor-avatar-registrar img{
+    width: 100%;  
+    height: 100%;
+    border-radius: 50%;
+    box-shadow: 0px -3px 9px 0 #00000042;
+}
+.contenedor-radio-label-vertical{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.contenedor-radio-label-vertical input{
+    width: 18px;
+    height: 18px;
+}
+#bodyIndex {
     width: auto;
     display: grid;
-    grid-template-areas: 
-    "header"
-    "mainIndex"
-    "footer";
+    grid-template-areas:
+        "header"
+        "mainIndex"
+        "footer";
     grid-template-rows: auto auto 100px;
     grid-template-columns: auto;
     font-size: 1.1rem;
-    background: linear-gradient(45deg, #680088 0%, #0d097d 50%, #184fc5 90%);
+    //background: linear-gradient(45deg, #865bd9 0%, #4742cd 50%, #4174e4 90%);
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .bien{
     background: RGB(144, 255, 144);
@@ -37,24 +84,6 @@
 
 .esconderse{
     display: none;
-}
-#contenedorForm{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(354deg, RGBa(103,61,254,1) 0%, RGBa(83,107,245,1) 50%, RGBa(95,228,247,1) 100%);
-}
-#formUsuario{
-    display: flex;
-    flex-direction: column;
-    height: 300px;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.esconderseMain{
-    display: none !important;
 }
 #mainIndex{
     grid-area: mainIndex;
@@ -80,9 +109,19 @@
     padding: 3% 0%;
     box-shadow: 0px 0px 14px 3px #0000009e;
 }
+.materia:nth-child(even){
+    /* background: linear-gradient(263deg, #8a6df5 0%, #536bf5 50%, #6ec6ff 100%); */
+    //background: linear-gradient(59deg, #8a6df5 0%, #536bf5 50%, #6ec6ff 100%);
+    background: linear-gradient(89deg, #657bfa 0%, #7bbaff 50%, #657bfa 100%);
+    
+}
+.materia:nth-child(odd){
+    //background: linear-gradient(237deg, #7c74ff 0%, #9377f3 50%, #5f76f7 100%);
+    background: linear-gradient(89deg, #8f3efa8c 0%, #cb90fc 50%, #8f3efa8c 100%);
+}
 #index-categorias{
     width: 100%;
-    margin: 25px 0;
+    margin: 15px 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -105,7 +144,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    background: linear-gradient(263deg, RGB(138 109 245) 0%, RGBa(83,107,245,1) 50%, RGB(110 198 255) 100%);
+    /* background: linear-gradient(263deg, RGB(138 109 245) 0%, RGBa(83,107,245,1) 50%, RGB(110 198 255) 100%); */
 }
 #contenedorCaluladora{
     display: flex;
@@ -161,7 +200,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    background: linear-gradient(237deg, RGB(119 61 254) 0%, RGBa(195,83,245,1) 50%, RGBa(123,95,247,1) 100%);
+    /* background: linear-gradient(237deg, RGB(119 61 254) 0%, RGBa(195,83,245,1) 50%, RGBa(123,95,247,1) 100%); */
 }
 .hijosLengua, .hijosMate{
     display: flex;
@@ -189,7 +228,7 @@ hr{
 /* -------------- MEMORIA -------------- */
 #memoria{
     grid-area: memoria;
-    background:linear-gradient(59deg, RGB(138 109 245) 0%, RGBa(83,107,245,1) 50%, RGB(110 198 255) 100%);
+    /* background:linear-gradient(59deg, RGB(138 109 245) 0%, RGBa(83,107,245,1) 50%, RGB(110 198 255) 100%); */
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
@@ -279,84 +318,116 @@ p#textoClick {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    background: linear-gradient(237deg, RGB(119 61 254) 0%, RGBa(195,83,245,1) 50%, RGBa(123,95,247,1) 100%);
+    /* background: linear-gradient(237deg, RGB(119 61 254) 0%, RGBa(195,83,245,1) 50%, RGBa(123,95,247,1) 100%); */
 }
 div#contenedorTextoBanderas {
     text-align: center;
-    margin-top: 33px;
 }
 div#contenedorDeBanderas {
     display: flex;
     flex-direction: row;
+    pointer-events: none;
+    gap: 10% 5%;
+    width: 100%;
+    align-items: center;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    align-items: center;
-    pointer-events: none;
+    flex: 0.5 0 0;
 }
-/* ------ Bandera argentina ----- */
-#contenedorArgentina{
-    width: 370px;
-    height: 190px;
-    display: grid;
-    grid-template-rows: 33% 33% 34%;
-    gap: 7px;
-    grid-template-areas:
-        "..."
-        "..."
-        "...";
-    margin: 30px 30px;
+.contenedoresDeCadaBandera{
+    /* width: 300px; */
+    width:25%;
+    min-width: 150px;
+    height: auto;
+    aspect-ratio: 2/1.3;
+    gap: 2%;
 }
 .cajasArgentina, .cajasChile, .cajasItalia{
-    border: 5px solid black;
+    border: 3px solid black;
     background-color: RGB(0, 0, 0);
     display: flex;
     justify-content: center;
+    align-items: center;
+    filter: brightness(0);
 }
-.cajasArgentina img{
+/* ------ Bandera argentina ----- */
+#contenedorArgentina{
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-areas:
+        "..."
+        "..."
+        "...";
+}
+div#contenedor-sol {
+    height: 100%;
+    width: min-content;
+    aspect-ratio: 1/1;
+}
+div#contenedor-sol svg{
+    height: 100%;
+    width: 100%;
+}
+
+/* .cajasArgentina img{
     height: 100%;
     filter: brightness(1.1);
     mix-blend-mode: multiply;
-}
+} */
 /* ------ Bandera chile ----- */
 #contenedorChile{
-    width: 370px;
-    height: 190px;
     display: grid;
     grid-template-columns: 1.5fr 2.5fr;
     grid-template-rows: 1fr 1fr;
-    gap: 7px;
     grid-template-areas:
-        ".."
-        "..";
-    margin: 30px 30px;
+        "uno dos"
+        "tres tres";
+}
+.cajasChile:nth-child(1){
+    grid-area: uno;
+}
+.cajasChile svg{
+    width: 55%;
+    height: 55%;
+    color: white;
+}
+.cajasChile:nth-child(2){
+    grid-area: dos;
+}
+.cajasChile:nth-child(3){
+    grid-area: tres;
 }
 /* ------ Bandera italia ----- */
 #contenedorItalia{
-    width: 370px;
-    height: 190px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
-    gap: 7px;
     grid-template-areas:
         "...";
-    margin: 30px 30px;
 }
 /* ----- Colores ------ */
 #contenedorBotonesColores{
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    gap: 10px;
+    width: 50%;
 }
-.botonesColores{
-    width: 150px;
-    height: 50px;
-    margin-bottom: 5px;
+.contenedo-tresBotones-colores-banderas{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    gap: 1%;
+}
+button.botonesColores{
+    width: auto;
+    height: auto;
+    margin: 0;
     text-transform: uppercase;
     font-weight: bold;
+    flex: 1;
 }
 .botonesColores:active{
     box-shadow: 0px 0px 4px 0px black;
@@ -366,19 +437,19 @@ div#contenedorDeBanderas {
     background-color: white;
 }
 #botonCeleste{
-    background-color: cornflowerblue;
+    background-color: #83afff;
 }
 #botonAmarillo{
-    background-color: yellow;
+    background-color: #ffff53;
 }
 #botonRojo{
-    background-color: red;
+    background-color: #ff5151;
 }
 #botonVerde{
-    background-color: green;
+    background-color: #66c966;
 }
 #botonRosa{
-    background-color: pink;
+    background-color: #ff69da;
 
 }
 .colorBlanco{
@@ -407,10 +478,12 @@ div#contenedorDeBanderas {
 }
 .coloresBien{
     box-shadow: 0 0 8PX 6px #15fe3cb0;
+    filter: brightness(1);
 }
 
 .coloresMal{
-    box-shadow: 0 0 8PX 1px #ff2f2fb0;
+    box-shadow: 0 0 8PX 1px #ff0000;
+    filter: brightness(1);
 }
 
 
@@ -424,7 +497,7 @@ div#contenedorDeBanderas {
     align-items: center;
     align-content: center;
     justify-content: space-evenly;
-    background: linear-gradient(59deg, RGB(138 109 245) 0%, RGBa(83,107,245,1) 50%, RGB(110 198 255) 100%);
+    /* background: linear-gradient(59deg, RGB(138 109 245) 0%, RGBa(83,107,245,1) 50%, RGB(110 198 255) 100%); */
 }
 .preguntasHistoria {
     display: flex;
@@ -507,16 +580,19 @@ label{
         width: 80px;
         height: 80px;
     }
-    #contenedorArgentina, #contenedorChile, #contenedorItalia{
+    /* #contenedorArgentina, #contenedorChile, #contenedorItalia{
         width: 300px;
         height: 150px;
         
-    } 
-    .botonesColores{
+    }  */
+    #contenedorBotonesColores {
+        width: 80%;
+    }
+    /* .botonesColores{
         width: 100px;
         height: 40px;
         margin-bottom: 5px;
-    }
+    } */
 }
 // animation cssloaders.github.io
 #contenedorMioLoader{
@@ -531,41 +607,45 @@ label{
 .contenedorMioLoaderAparecer{
     display: block;
 }
-
-
-  .loader {
-        width: 48px;
-        height: 48px;
-        border:10px solid #FFF;
-        border-radius: 50%;
-        position: relative;
-        transform:rotate(45deg);
-        box-sizing: border-box;
+.loader {
+    width: 48px;
+    height: 48px;
+    border: 10px solid #FFF;
+    border-radius: 50%;
+    position: relative;
+    transform: rotate(45deg);
+    box-sizing: border-box;
     display: inline-block;
-      }
-      .loader::before {
-        content: "";
-        position: absolute;
-        box-sizing: border-box;
-        inset:-10px;
-        border-radius: 50%;
-        border:10px solid #FF3D00;
-        animation: prixClipFix 7s linear;
-      }
-  
-      @keyframes prixClipFix {
-          0%   {clip-path:polygon(50% 50%,0 0,0 0,0 0,0 0,0 0)}
-          25%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 0,100% 0,100% 0)}
-          50%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%)}
-          75%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 100%)}
-          100% {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 0)}
-      }
+}
 
-  @keyframes prixClipFix {
-      0%   {clip-path:polygon(50% 50%,0 0,0 0,0 0,0 0,0 0)}
-      25%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 0,100% 0,100% 0)}
-      50%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%)}
-      75%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 100%)}
-      100% {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 0)}
-  }
-    
+.loader::before {
+    content: "";
+    position: absolute;
+    box-sizing: border-box;
+    inset: -10px;
+    border-radius: 50%;
+    border: 10px solid #FF3D00;
+    animation: prixClipFix 7s linear;
+}
+
+@keyframes prixClipFix {
+    0% {
+        clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0)
+    }
+
+    25% {
+        clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 0, 100% 0, 100% 0)
+    }
+
+    50% {
+        clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 100% 100%, 100% 100%)
+    }
+
+    75% {
+        clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 100%)
+    }
+
+    100% {
+        clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 0)
+    }
+}
