--- a/docs/scss/_header.scss
+++ b/docs/scss/_header.scss
@@ -29,21 +29,30 @@ header a{
 header a:hover{
     text-decoration: underline;
     text-shadow: 0PX 0PX 12PX #ffffff8f;
+    background: #ffffff47;
 }
-header div{
+header #header-contenedorTotal-usuario{
+    position: relative;
     color: #ffef00;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 10px;
+    /* border-radius: 1000px;  
+    padding: 0 0.5%;  */
+}
+svg#header-flecha-submenu {
+    align-self: flex-end;
+}
+header #header-contenedorTotal-usuario:hover{
+    background: #ffffff47;
+    
 }
 img#header-avatar {
     border-radius: 50%;
     width: 40px;
     height: 40px;
     box-shadow: 0 0 10px 0px #000000ba;
+    margin: 0 5px;
+}
+p.nav-user-text {
+    width: min-content;
 }
 header div button {
     border: 1px solid black;
@@ -55,4 +64,30 @@ header div button {
     width: min-content;
     padding: 0 3%;
     margin: 0px; 
+}
+#header-infoLogout{
+    position: absolute ;
+    display: none;
+    width: 100%;
+    background: #4f74bc;
+    box-shadow: 0 3px 7px 0px #00000087;   
+}
+#header-infoLogout li {
+    border-bottom: 1px solid black;
+}
+#header-infoLogout li:hover {
+    background-color: rgba(255, 255, 255, 0.356);
+}
+#header-contenedorTotal-usuario:hover #header-infoLogout{
+    position: absolute ;
+    display: block;
+}
+
+#header-contenedor-avatarNombre {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    flex-wrap:nowrap;
+    /* gap: 10px; */
 }
