--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -281,6 +281,7 @@ p#textoClick {
 .mostrarMemoria{
     animation-name: prueba;
     animation-duration: 1s;
+    animation-timing-function: ease-out;
 }
 
 @keyframes prueba{
