--- a/docs/scss/_general.scss
+++ b/docs/scss/_general.scss
@@ -8,7 +8,7 @@ html{
 }
 body{
     text-align: center;
-    background: linear-gradient(45deg, #6b5bd8 0%, #5965ff 50%, #418fe4 100%);
+    background: linear-gradient(45deg, #9185d9 0%, #6c77ff 50%, #55a3f8 100%);
 } 
 button{
     border: 1px solid black;
