--- a/docs/scss/_header.scss
+++ b/docs/scss/_header.scss
@@ -75,6 +75,7 @@ header div button {
     width: 100%;
     background: #4f74bc;
     box-shadow: 0 3px 7px 0px #00000087;   
+    z-index: 1;
 }
 #header-infoLogout li {
     border-bottom: 1px solid black;
