--- a/docs/scss/registrar.scss
+++ b/docs/scss/registrar.scss
@@ -22,6 +22,8 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    // Relative para las imagenes de fondo que son avsolutas
+    position: relative;
 }
 #formUsuario {
     display: flex;
@@ -81,7 +83,19 @@ input[type="text"] {
     margin: 15px;
     border: none;
 }
-
+.registrar-avatares-fondo{
+    position: absolute;
+    width: 30%;
+    height: auto;
+    opacity: 0.5;
+    z-index: -1;
+}
+#registrar-avatar-fondo-nene{
+    left: 0;
+}
+#registrar-avatar-fondo-nena{
+    right: 0;
+}
 @media screen and (min-width: 0px) and (max-width: 768px){
     .swal2-container.swal2-center>.swal2-popup {
         font-size: 13px;;
@@ -92,7 +106,10 @@ input[type="text"] {
     header div ul{
     display: flex;
     flex-direction: row;
-
+    }
 }
-    
+@media screen and (min-width: 0px) and (max-width: 490px){
+    .registrar-avatares-fondo{
+        display: none;
+    }
 }
