--- a/docs/scss/_header.scss
+++ b/docs/scss/_header.scss
@@ -3,19 +3,48 @@ header{
     box-sizing: border-box;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
-    background: linear-gradient(45deg, #5497ff 0%, #858eff 50%, #5497ff 100%);
+    /* background: linear-gradient(45deg, #5497ff 0%, #858eff 50%, #5497ff 100%); */
+    //mas claro
+    background: linear-gradient(45deg, #67a3ff 0%, #9aa2ff 50%, #6ea7ff 100%);
     box-shadow: 0 1px 13px 1px #00000063;
     border-bottom: 1px solid #00000052;
+    z-index: 1000;
 }
 header > .header-title{
     font-size: 40px;
     font-weight: bold;
+    letter-spacing: -4px;
 }
+header>.header-title:hover {
+    text-shadow: 0PX 0PX 12PX #ffffff8f;
+    background: #ffffff47;
+}
+header > .header-title span{
+    display: inline-block;
+    text-shadow: 1px 1px 1px #000000a1;
+}
+.header-title span:nth-child(1) { color: #ff3d3d; transform: rotate(-5deg); }
+
+.header-title span:nth-child(2) { color: #FFA500; transform: rotate(3deg); }
+
+.header-title span:nth-child(3) { color: #FFFF00; transform: rotate(-2deg); }
+
+.header-title span:nth-child(4) { color: #00ff00; transform: rotate(4deg); }
+
+.header-title span:nth-child(5) { color: #00edff; transform: rotate(-3deg); }
+
+.header-title span:nth-child(6) { color: #9300ff;; transform: rotate(2deg); }
+
+.header-title span:nth-child(7) { color: #EE82EE; transform: rotate(-4deg); }
+
+.header-title span:nth-child(8) { color: #FFC0CB; transform: rotate(353deg); }
+
+.header-title span:nth-child(9) { color: #ff3d3d; transform: rotate(14deg); } 
 header ul{
     display: flex;
-    gap: 59px;
+    gap: 35px;
 }
 header li{
     list-style: none;
@@ -26,7 +55,7 @@ header a{
     font-size: 20px;
     text-decoration: none;
 }
-header a:hover{
+header nav a:hover{
     text-decoration: underline;
     text-shadow: 0PX 0PX 12PX #ffffff8f;
     background: #ffffff47;
@@ -53,7 +82,7 @@ img#header-avatar {
 }
 p.nav-user-text {
     width: min-content;
-    max-width: 20ch;
+    max-width: 13ch;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
