--- a/docs/scss/puntaje.scss
+++ b/docs/scss/puntaje.scss
@@ -23,6 +23,28 @@
     align-items: center;
 
 }
+#puntaje-textoExplicativo{
+    text-decoration: underline;
+    font-size: 25px;
+    margin: 1em 0;
+}
+#puntaje-textoExplicativo-listaDesordenada li{
+    text-align: start;
+}
+#puntaje-textoExplicativo-listaDesordenada span{
+    width: 2em;
+    height: 2em;
+    background: #000000;
+    border-radius: 100%;
+    color: white;
+    text-align: center;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.8em;
+    padding: 0.2em;
+    margin-left: 0.5em;
+}
 #participantes {
     display: flex;
     justify-content: center;
@@ -36,7 +58,7 @@ table,caption,tr,th,td{
 table {
     caption-side: top;
     border-collapse: collapse;
-    width: 90%;
+    /* width: 90%; */
     margin: 50px 0px;
     background: #8fe0ffb5;
     box-shadow: 0 0 6px 0.5px black;
