quite el header de registrar y detalles

--- a/docs/scss/_footer.scss
+++ b/docs/scss/_footer.scss
@@ -14,7 +14,7 @@ footer a{
     align-items: center;
     justify-content: center;
     text-decoration: none;
-    color: rgb(0, 0, 0);
+    color: #ffef00;
     gap: 12px;
 }
 footer svg{
