--- a/docs/scss/_header.scss
+++ b/docs/scss/_header.scss
@@ -16,6 +16,7 @@ header > .header-title{
     font-size: 40px;
     font-weight: bold;
     letter-spacing: -4px;
+    flex: 1;
 }
 header>.header-title:hover {
     text-shadow: 0PX 0PX 12PX #ffffff8f;
@@ -42,8 +43,12 @@ header > .header-title span{
 .header-title span:nth-child(8) { color: #FFC0CB; transform: rotate(353deg); }
 
 .header-title span:nth-child(9) { color: #ff3d3d; transform: rotate(14deg); } 
+header nav{
+    flex: 1;
+}
 header ul{
     display: flex;
+    justify-content: center;
     gap: 35px;
 }
 header li{
@@ -60,11 +65,19 @@ header nav a:hover{
     text-shadow: 0PX 0PX 12PX #ffffff8f;
     background: #ffffff47;
 }
+#header-contenedorEspacio-usuario{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 header #header-contenedorTotal-usuario{
     position: relative;
     color: #ffef00;
     /* border-radius: 1000px;  
     padding: 0 0.5%;  */
+    flex: 1;
 }
 svg#header-flecha-submenu {
     align-self: flex-end;
@@ -99,15 +112,24 @@ header div button {
     margin: 0px; 
 }
 #header-infoLogout{
-    position: absolute ;
+    position: absolute;
     display: none;
     width: 100%;
     background: #4f74bc;
-    box-shadow: 0 3px 7px 0px #00000087;   
+    box-shadow: 0 3px 7px 0px #00000087;
     z-index: 1;
+    font-size: 1rem;
+    border-radius: 0 0 1em 1em;
+    overflow: hidden;
 }
 #header-infoLogout li {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #0000008c;
+    padding: 0.2em;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    
 }
 #header-infoLogout li:hover {
     background-color: rgba(255, 255, 255, 0.356);
