--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -297,6 +297,7 @@ p#textoClick {
     -webkit-text-stroke-color: #ffffff;
     -webkit-text-stroke-width: 1px;
     -webkit-text-fill-color: #ffffff00;
+    font-family: sans-serif;
 }
 .claseCajaClick img{
     width: 100%;
